--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -1822,7 +1822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e8202ca",
+   "id": "ba91172d",
    "metadata": {},
    "source": [
     "# Combining Dataframes \n",
@@ -1836,7 +1836,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "95b06985",
+   "id": "0033c500",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1863,7 +1863,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "98bfcd29",
+   "id": "aeacae95",
    "metadata": {},
    "outputs": [
     {
@@ -1997,7 +1997,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "c2a5d628",
+   "id": "57ca3e3d",
    "metadata": {},
    "outputs": [
     {
@@ -2130,7 +2130,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "fa06bc2f",
+   "id": "bbcc2037",
    "metadata": {},
    "outputs": [
     {
@@ -2264,7 +2264,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "c6f853f9",
+   "id": "6b9134bd",
    "metadata": {},
    "outputs": [
     {
@@ -2397,7 +2397,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "0df43471",
+   "id": "cd8505dd",
    "metadata": {},
    "outputs": [
     {
@@ -2549,7 +2549,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "21925832",
+   "id": "89e157e0",
    "metadata": {},
    "outputs": [
     {
@@ -2651,7 +2651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3d789ea",
+   "id": "dd5d7961",
    "metadata": {},
    "source": [
     "# Merge and Join\n",
@@ -2664,7 +2664,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "fa30759c",
+   "id": "4f72e936",
    "metadata": {},
    "outputs": [
     {
@@ -2774,7 +2774,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "f53fd630",
+   "id": "d32ebe22",
    "metadata": {},
    "outputs": [
     {
@@ -2861,7 +2861,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "51e2238c",
+   "id": "4d1f742f",
    "metadata": {},
    "outputs": [
     {
@@ -2959,7 +2959,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "03ec29ed",
+   "id": "fd62b311",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2974,7 +2974,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "a3fe3518",
+   "id": "f44f01c9",
    "metadata": {},
    "outputs": [
     {
@@ -3057,7 +3057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2cfcd0b",
+   "id": "8f04a7f0",
    "metadata": {},
    "source": [
     "# Pandas Functions"
@@ -3066,7 +3066,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "aa64f442",
+   "id": "dc8ca0fd",
    "metadata": {},
    "outputs": [
     {
@@ -3089,7 +3089,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "631b2c1d",
+   "id": "5ef4afe9",
    "metadata": {},
    "outputs": [
     {
@@ -3114,7 +3114,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "9b5bb924",
+   "id": "7d1ca63d",
    "metadata": {},
    "outputs": [
     {
@@ -3138,7 +3138,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "fc271184",
+   "id": "088fcdc5",
    "metadata": {},
    "outputs": [
     {
@@ -3160,7 +3160,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "4ecbcdb8",
+   "id": "79d726e5",
    "metadata": {},
    "outputs": [
     {
@@ -3243,7 +3243,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "7e667a8a",
+   "id": "496f6a2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3254,7 +3254,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "7244ffba",
+   "id": "492396ba",
    "metadata": {},
    "outputs": [
     {
@@ -3313,7 +3313,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "fa146d52",
+   "id": "323075cf",
    "metadata": {},
    "outputs": [
     {
@@ -3333,7 +3333,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "ea13b591",
+   "id": "24ddb791",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3345,7 +3345,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "1326c23d",
+   "id": "8499b96f",
    "metadata": {},
    "outputs": [
     {
@@ -3371,7 +3371,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "bfebe090",
+   "id": "38b16758",
    "metadata": {},
    "outputs": [
     {
@@ -3397,7 +3397,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "af66a8c2",
+   "id": "8fd42a0a",
    "metadata": {},
    "outputs": [
     {
@@ -3472,7 +3472,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "c424c6d6",
+   "id": "6b0cede4",
    "metadata": {},
    "outputs": [
     {
@@ -3499,7 +3499,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "6e4a8f8b",
+   "id": "1a516b5b",
    "metadata": {},
    "outputs": [
     {
@@ -3578,7 +3578,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "550d783c",
+   "id": "61198583",
    "metadata": {},
    "outputs": [
     {
@@ -3599,7 +3599,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "6d42676b",
+   "id": "a423c044",
    "metadata": {},
    "outputs": [
     {
@@ -3677,7 +3677,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "7bde6a26",
+   "id": "00b2a392",
    "metadata": {},
    "outputs": [
     {
@@ -3755,7 +3755,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "c48b1d75",
+   "id": "263a96b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3765,7 +3765,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "37a847f3",
+   "id": "51d9ea41",
    "metadata": {},
    "outputs": [
     {
@@ -3843,7 +3843,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "f6bfddca",
+   "id": "39cfe031",
    "metadata": {},
    "outputs": [
     {
@@ -3939,7 +3939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0c2b423",
+   "id": "3e2b339a",
    "metadata": {},
    "source": [
     "# groupby\n",
@@ -3950,7 +3950,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "9fd39ca1",
+   "id": "6bce17c1",
    "metadata": {},
    "outputs": [
     {
@@ -3969,7 +3969,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "d5a7d3db",
+   "id": "b37d7643",
    "metadata": {},
    "outputs": [
     {
@@ -4129,7 +4129,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "b5def8ce",
+   "id": "15d4c1db",
    "metadata": {},
    "outputs": [
     {
@@ -4202,7 +4202,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "665bb6c6",
+   "id": "ed39c026",
    "metadata": {},
    "outputs": [
     {
@@ -4274,7 +4274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e8123dc",
+   "id": "7f6d6e2f",
    "metadata": {},
    "source": [
     "# saving a loading data frames"
@@ -4283,7 +4283,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "23883cef",
+   "id": "21980927",
    "metadata": {},
    "outputs": [
     {
@@ -4361,7 +4361,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "b7fdb7c9",
+   "id": "ce9145d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4371,7 +4371,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "1f2935f7",
+   "id": "51a87532",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4381,7 +4381,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "9da3435e",
+   "id": "e736b53c",
    "metadata": {},
    "outputs": [
     {
@@ -4459,7 +4459,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "c2c69762",
+   "id": "639d78e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4469,7 +4469,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "0a05fa8d",
+   "id": "d98ef642",
    "metadata": {},
    "outputs": [
     {
@@ -4547,8 +4547,88 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 178,
+   "id": "ebae3f96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>distance</th>\n",
+       "      <th>sales</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>customer</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>9</td>\n",
+       "      <td>214</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>12</td>\n",
+       "      <td>123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>21</td>\n",
+       "      <td>331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>44</td>\n",
+       "      <td>663</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          distance  sales\n",
+       "customer                 \n",
+       "103              9    214\n",
+       "101             12    123\n",
+       "105             21    331\n",
+       "104             44    663"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newer_df9 = pd.read_excel('df8.xlsx',sheet_name='first sheet',index_col=0)\n",
+    "newer_df9"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5d25e695",
+   "id": "9ef61afc",
    "metadata": {},
    "outputs": [],
    "source": []
